game-of-pods/iron-gallery/db-deploy.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iron-db
spec:
  replicas: 1
  selector:
    matchLabels:
      db: mariadb
  template:
    metadata:
      labels:
        db: mariadb
    spec:
      containers:
      - name: iron-gallery
        image: kodekloud/irondb:2.0
        volumeMounts:
          - name: db
            mountPath: "/var/lib/mysql"
        ports:
          - containerPort: 3306

      volumes:
        - name: db
          emptyDir: {}
