game-of-pods/iron-gallery/gallery-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: iron-gallery-service
spec:
  type: NodePort
  selector:
    run: iron-gallery
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    nodePort: 30099
