game-of-pods/iron-gallery/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iron-gallery-ingress
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: iron-gallery-braavos.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: iron-gallery-service
            port:
              number: 80
